--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://akshatrajsaxena.github.io/MyPortfolioReact",
-  "name": "react-portfolio",
+  "name": "my-portfolio-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
